[tool.poetry]
name = "labelu"
version = '1.3.0-alpha.6'
description = ""
license = "Apache-2.0"
authors = ["shenguanlin <shenguanlin@pjlab.org.cn>"]
readme = "README.md"
repository = "https://github.com/opendatalab/labelU"
packages = [{include = "labelu"}]

[tool.poetry.scripts]
labelu = "labelu.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
loguru = "^0.6.0"
sqlalchemy = "^1.4.43"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
typer = {extras = ["all"], version = "^0.7.0"}
uvicorn = "^0.19.0"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.0"
appdirs = "^1.4.4"
aiofiles = "^22.1.0"
pillow = "^9.3.0"
alembic = "^1.9.4"
httpx = "^0.27.0"
tfrecord = "^1.14.5"
websockets = "^10.0.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
