[project]
name = "labelu"
version = '1.3.3'
description = ""
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "shenguanlin", email = "shenguanlin@pjlab.org.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "loguru>=0.6.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.7.0",
    "uvicorn>=0.19.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=0.21.0",
    "appdirs>=1.4.4",
    "aiofiles>=22.1.0",
    "pillow>=9.3.0",
    "alembic>=1.9.4",
    "httpx>=0.27.0",
    "tfrecord>=1.14.5",
    "websockets>=10.0.0",
    "bcrypt==4.3.0",
]

[project.optional-dependencies]
mysql = [
    "mysqlclient>=2.1.1",
]

[project.urls]
repository = "https://github.com/opendatalab/labelU"

[project.scripts]
labelu = "labelu.main:cli"

[dependency-groups]
dev = [
    "black>=22.10.0",
    "flake8>=5.0.4",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["labelu"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
